IBOState.cs and BOState.cs changed to IBOStatus.cs and BOStatus.cs. BusinessObject.State chagned to BusinessObject.Status. Updated all classes that use BOState or BusinessObject.State to use the new class and methods. Added comments to classes. Removed logic that updates the BOProp's Dispay name based on the Labels set in the grid or the BOPanel. Modified the PropDef so that it can store multiple Rules per Property. Got loading via DB tests all passing.

--- a/source/Habanero.Base/Habanero.Base.csproj
+++ b/source/Habanero.Base/Habanero.Base.csproj
@@ -106,7 +106,7 @@
     <Compile Include="IApplicationVersionUpgrader.cs" />
     <Compile Include="IBOKey.cs" />
     <Compile Include="IBOProp.cs" />
-    <Compile Include="IBOState.cs" />
+    <Compile Include="IBOStatus.cs" />
     <Compile Include="IBusinessObject.cs" />
     <Compile Include="IBusinessObjectCollection.cs" />
     <Compile Include="IBusinessObjectDeletor.cs" />
