--- a/source/Habanero.UI.WebGUI/Habanero.UI.WebGUI.csproj
+++ b/source/Habanero.UI.WebGUI/Habanero.UI.WebGUI.csproj
@@ -54,6 +54,7 @@
     </Compile>
     <Compile Include="BorderLayoutManagerGiz.cs" />
     <Compile Include="ButtonGroupControlGiz.cs">
+      <SubType>Component</SubType>
     </Compile>
     <Compile Include="CheckBoxGiz.cs">
       <SubType>Component</SubType>
@@ -66,6 +67,7 @@
     </Compile>
     <Compile Include="ControlCollectionGiz.cs" />
     <Compile Include="ControlGiz.cs">
+      <SubType>Component</SubType>
     </Compile>
     <Compile Include="DataGridViewCheckBoxColumnGiz.cs" />
     <Compile Include="DataGridViewComboBoxColumnGiz.cs" />
@@ -124,6 +126,7 @@
       <SubType>Component</SubType>
     </Compile>
     <Compile Include="DefaultBOEditorFormGiz.cs">
+      <SubType>Form</SubType>
     </Compile>
     <Compile Include="ControlFactoryGizmox.cs">
     </Compile>
@@ -143,6 +146,7 @@
       <DependentUpon>MultiSelectorGiz.cs</DependentUpon>
     </Compile>
     <Compile Include="PanelGiz.cs">
+      <SubType>Component</SubType>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="..\Common\AssemblyInfoShared.cs">
@@ -155,6 +159,7 @@
       <SubType>Component</SubType>
     </Compile>
     <Compile Include="Grid\ReadOnlyGridControlGiz.cs">
+      <SubType>Component</SubType>
     </Compile>
     <Compile Include="TextBoxGiz.cs">
       <SubType>Component</SubType>
