--- a/source/Habanero.UI.Win/Habanero.UI.Win.csproj
+++ b/source/Habanero.UI.Win/Habanero.UI.Win.csproj
@@ -163,6 +163,9 @@
     <Compile Include="ToolTipWin.cs">
       <SubType>Component</SubType>
     </Compile>
+    <Compile Include="TreeViewWin.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="UserControlWin.cs">
       <SubType>UserControl</SubType>
     </Compile>
