--- a/source/Habanero.Test.UI.Base/Habanero.Test.UI.Base.csproj
+++ b/source/Habanero.Test.UI.Base/Habanero.Test.UI.Base.csproj
@@ -144,6 +144,7 @@
     <Compile Include="TestListView.cs" />
     <Compile Include="Mappers\TestListComboBoxMapper.cs" />
     <Compile Include="PanelFactory\TestPanelFactory.cs" />
+    <Compile Include="TestTreeViewGridViewEditor.cs" />
     <Compile Include="TestValidationRule.cs" />
     <Compile Include="Wizard\TestWizardControl.cs" />
     <Compile Include="Wizard\TestWizardController.cs" />
