Changed the Find in BusinessObjectCollection to include CreatedBusinessObjects Ensured that EditableDataSetProvider didn't add the same row twice Completed StaticDataEditorWin (was TreeViewGridViewEditorWin)

--- a/source/Habanero.UI.Win/Habanero.UI.Win.csproj
+++ b/source/Habanero.UI.Win/Habanero.UI.Win.csproj
@@ -163,7 +163,7 @@
     <Compile Include="ToolTipWin.cs">
       <SubType>Component</SubType>
     </Compile>
-    <Compile Include="TreeViewGridViewEditorWin.cs">
+    <Compile Include="StaticDataEditorWin.cs">
       <SubType>Component</SubType>
     </Compile>
     <Compile Include="TreeViewWin.cs">
