Added working DataGridViewDateTimeColumn for Win (can't clear a datetime once chosen). Changed DataGridView to support custom columns. Added CloseToDateTimeNow method on DateTimeUtilities. Added a manager for ControlFactory, wasn't needed in the end, but it might be worth something, so I left it.

--- a/source/Habanero.UI.Base/Habanero.UI.Base.csproj
+++ b/source/Habanero.UI.Base/Habanero.UI.Base.csproj
@@ -48,6 +48,7 @@
     <Compile Include="BOColTabControlManager.cs" />
     <Compile Include="ComboBoxManager.cs" />
     <Compile Include="ButtonGroupControlManager.cs" />
+    <Compile Include="ControlFactoryManager.cs" />
     <Compile Include="ControlInterfaces\Events.cs" />
     <Compile Include="ControlInterfaces\IBOColTabControl.cs" />
     <Compile Include="ControlInterfaces\IBusinessObjectControl.cs" />
@@ -62,6 +63,7 @@
     <Compile Include="ControlMappers\DateTimePickerMapper.cs" />
     <Compile Include="DateTimePicker\DateTimePickerManager.cs" />
     <Compile Include="FormController.cs" />
+    <Compile Include="Grid\IDataGridViewDateTimeColumn.cs" />
     <Compile Include="Grid\IDataGridViewCellStyle.cs" />
     <Compile Include="Grid\IDataGridViewCheckBoxColumn.cs" />
     <Compile Include="Grid\IDataGridViewImageColumn.cs" />
