Introduced the previously useless IDataGridView into the structure, so GridBase now inherits from the DataGridViews and just adds the BO col functionality.
Also changed Editable Grid to support selecting entire rows so you can delete and fixed a logic flaw in deleting rows while clicking on the cells.

--- a/source/Habanero.UI.VWG/Habanero.UI.VWG.csproj
+++ b/source/Habanero.UI.VWG/Habanero.UI.VWG.csproj
@@ -102,6 +102,9 @@
     </Compile>
     <Compile Include="Grid\DataGridViewCellStyleVWG.cs" />
     <Compile Include="Grid\DataGridViewColumnVWG.cs" />
+    <Compile Include="Grid\DataGridViewVWG.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="Grid\EditableGridButtonsControlVWG.cs">
       <SubType>Component</SubType>
     </Compile>
