--- a/source/Habanero.UI.VWG/Habanero.UI.VWG.csproj
+++ b/source/Habanero.UI.VWG/Habanero.UI.VWG.csproj
@@ -137,6 +137,9 @@
     <Compile Include="ListViewVWG.designer.cs">
       <DependentUpon>ListViewVWG.cs</DependentUpon>
     </Compile>
+    <Compile Include="MenuBuilderVWG.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="MultiSelectorVWG.cs">
       <SubType>UserControl</SubType>
     </Compile>
