--- a/source/Habanero.UI.Base/Habanero.UI.Base.csproj
+++ b/source/Habanero.UI.Base/Habanero.UI.Base.csproj
@@ -77,6 +77,7 @@
     <Compile Include="Grid\IEditableGridButtonsControl.cs" />
     <Compile Include="Grid\IGridControl.cs" />
     <Compile Include="Grid\IGridInitialiser.cs" />
+    <Compile Include="HabaneroMenu.cs" />
     <Compile Include="HelpAboutBoxManager.cs" />
     <Compile Include="ICollectionTabControlMapper.cs" />
     <Compile Include="Grid\EditableGridControlManager.cs" />
@@ -98,6 +99,10 @@
     <Compile Include="IFormControl.cs" />
     <Compile Include="IFormController.cs" />
     <Compile Include="IListView.cs" />
+    <Compile Include="IMainMenuHabanero.cs" />
+    <Compile Include="IMenuBuilder.cs" />
+    <Compile Include="IMenuItem.cs" />
+    <Compile Include="IMenuItemCollection.cs" />
     <Compile Include="InputFormComboBox.cs" />
     <Compile Include="InputFormDate.cs" />
     <Compile Include="InputFormTextBox.cs" />
