--- a/source/Habanero.UI.VWG/Habanero.UI.VWG.csproj
+++ b/source/Habanero.UI.VWG/Habanero.UI.VWG.csproj
@@ -101,7 +101,9 @@
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Grid\DataGridViewCellStyleVWG.cs" />
+    <Compile Include="Grid\DataGridViewCellVWG.cs" />
     <Compile Include="Grid\DataGridViewColumnVWG.cs" />
+    <Compile Include="Grid\DataGridViewImageColumnVWG.cs" />
     <Compile Include="Grid\DataGridViewVWG.cs">
       <SubType>Component</SubType>
     </Compile>
