--- a/source/Habanero.Test/Habanero.Test.csproj
+++ b/source/Habanero.Test/Habanero.Test.csproj
@@ -113,6 +113,10 @@
       <Project>{9ED22DDE-ED14-43CA-807A-D0A42DFBF322}</Project>
       <Name>Habanero.BO</Name>
     </ProjectReference>
+    <ProjectReference Include="..\Habanero.Console\Habanero.Console.csproj">
+      <Project>{9B32C6E9-037A-4610-85CB-95C9A050CF7C}</Project>
+      <Name>Habanero.Console</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Habanero.Db\Habanero.DB.csproj">
       <Project>{80FEC63C-DBD7-4DAE-882D-9CB93F738B48}</Project>
       <Name>Habanero.DB</Name>
@@ -124,10 +128,6 @@
     <ProjectReference Include="..\Habanero.Util\Habanero.Util.csproj">
       <Project>{D3B50C81-590B-429F-9761-3B676D607DFF}</Project>
       <Name>Habanero.Util</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Habanero\Habanero.csproj">
-      <Project>{9B32C6E9-037A-4610-85CB-95C9A050CF7C}</Project>
-      <Name>Habanero</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
