(Merged from Branch v1.4) Moved class definition of TransactionLogBusObj to a static method called LoadClassDef on the class. Fixed problem with special characters in DirtyXml from BOProp. Fixed ordering of Transaction logs. Added some performance improvements to Habanero. Fixed bug where the order by clause was after the limit clause for mysql. Fixed bug in TransactionLogTable that would cause performance issues. Moved TransactionLogBusObj to Habanero.Bo project from Habanero.Test.Bo project.

--- a/source/Habanero.Bo/Habanero.Bo.csproj
+++ b/source/Habanero.Bo/Habanero.Bo.csproj
@@ -340,6 +340,7 @@
     <Compile Include="TransactionCommitterDB.cs" />
     <Compile Include="TransactionCommitter.cs" />
     <Compile Include="TransactionCommitterInMemory.cs" />
+    <Compile Include="TransactionLogBusObj.cs" />
     <Compile Include="TransactionLogTable.cs">
       <SubType>Code</SubType>
     </Compile>
