made changes to the email error

--- a/source/Habanero.UI.Win/Habanero.UI.Win.csproj
+++ b/source/Habanero.UI.Win/Habanero.UI.Win.csproj
@@ -84,6 +84,9 @@
     <Compile Include="EditableGridWin.cs">
       <SubType>Component</SubType>
     </Compile>
+    <Compile Include="ErrorDescriptionForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="ErrorProviderWin.cs">
       <SubType>Component</SubType>
     </Compile>
