Refactored Loaders so that the main logic of loading collections is in the Refresh method for both loaders and they have shared code in BusinessObjectLoaderBase. Changed all usages of BusinessObjectCollection<BusinessObject> to use the correct loader code. Fixed TestPanelFactory test that was breaking some other UI tests. Added RemoveAt method to IBusinessObjectCollection interface.

--- a/source/Habanero.Bo/Habanero.Bo.csproj
+++ b/source/Habanero.Bo/Habanero.Bo.csproj
@@ -97,6 +97,7 @@
   <ItemGroup>
     <Compile Include="BORegistry.cs" />
     <Compile Include="BOStatus.cs" />
+    <Compile Include="BusinessObjectLoaderBase.cs" />
     <Compile Include="BusinessObjectLoaderDB.cs" />
     <Compile Include="BusinessObjectLastUpdatePropertiesLog.cs" />
     <Compile Include="BusinessObjectLoaderInMemory.cs" />
@@ -128,6 +129,7 @@
     <Compile Include="DataAccessorInMemory.cs" />
     <Compile Include="DataStoreInMemory.cs" />
     <Compile Include="DeleteHelper.cs" />
+    <Compile Include="ExceptionHelper.cs" />
     <Compile Include="IBusinessObjectLoader.cs" />
     <Compile Include="IDataAccessor.cs" />
     <Compile Include="IDataSetProvider.cs" />
