Added DataGridViewNumericUpDownColumn for windows. VWG version still needs to be implemented.

--- a/source/Habanero.UI.Base/Habanero.UI.Base.csproj
+++ b/source/Habanero.UI.Base/Habanero.UI.Base.csproj
@@ -72,6 +72,7 @@
     <Compile Include="Grid\IDataGridViewCellStyle.cs" />
     <Compile Include="Grid\IDataGridViewCheckBoxColumn.cs" />
     <Compile Include="Grid\IDataGridViewImageColumn.cs" />
+    <Compile Include="Grid\IDataGridViewNumericUpDownColumn.cs" />
     <Compile Include="Grid\IDataGridViewSelectedCellCollection.cs" />
     <Compile Include="Grid\IDataGridViewTextBoxColumn.cs" />
     <Compile Include="Grid\IEditableGrid.cs" />
