--- a/source/Habanero.Test.UI.Base/Habanero.Test.UI.Base.csproj
+++ b/source/Habanero.Test.UI.Base/Habanero.Test.UI.Base.csproj
@@ -78,6 +78,7 @@
       <Link>Properties\AssemblyInfoShared.cs</Link>
     </Compile>
     <Compile Include="ButtonsControl\TestButtonGroupControl.cs" />
+    <Compile Include="Grid\TestDataGridViewNumericUpDownColumn.cs" />
     <Compile Include="TestDialogResult.cs" />
     <Compile Include="TestHabaneroMenu.cs" />
     <Compile Include="TestInputFormComboBox.cs" />
