Added an alternate menu implementation option using control managers.

--- a/source/Habanero.UI.Base/Habanero.UI.Base.csproj
+++ b/source/Habanero.UI.Base/Habanero.UI.Base.csproj
@@ -97,6 +97,7 @@
     <Compile Include="DefaultBODeletor.cs" />
     <Compile Include="Grid\IDataGridViewColumn.cs" />
     <Compile Include="Grid\IDataGridViewComboBoxColumn.cs" />
+    <Compile Include="IControlManager.cs" />
     <Compile Include="IErrorProvider.cs" />
     <Compile Include="IFormControl.cs" />
     <Compile Include="IFormController.cs" />
