Added Better exception handling to MenuBuilder and emailing from FormExceptionNotifier.

--- a/source/Habanero.Test/Habanero.Test.csproj
+++ b/source/Habanero.Test/Habanero.Test.csproj
@@ -68,6 +68,7 @@
     <Compile Include="ContactPerson.cs" />
     <Compile Include="ContactPersonCompositeKey.cs" />
     <Compile Include="ISampleUserInterfaceMapper.cs" />
+    <Compile Include="MockExceptionNotifier.cs" />
     <Compile Include="OrderItem.cs" />
     <Compile Include="Engine.cs" />
     <Compile Include="FilledCircle.cs" />
