Changed ComboBox to be able to set the AutoCompleteMode and AutoCompleteSource.

--- a/source/Habanero.UI.VWG/Habanero.UI.VWG.csproj
+++ b/source/Habanero.UI.VWG/Habanero.UI.VWG.csproj
@@ -63,9 +63,11 @@
     <Compile Include="CheckBoxVWG.cs">
       <SubType>Component</SubType>
     </Compile>
+    <Compile Include="ComboBoxAutoCompleteModeVWG.cs" />
     <Compile Include="ComboBoxVWG.cs">
       <SubType>Component</SubType>
     </Compile>
+    <Compile Include="ComboBoxAutoCompleteSourceVWG.cs" />
     <Compile Include="ControlCollectionVWG.cs" />
     <Compile Include="ControlFactoryVWG.cs" />
     <Compile Include="ControlVWG.cs">
