--- a/source/Habanero.Bo/Habanero.Bo.csproj
+++ b/source/Habanero.Bo/Habanero.Bo.csproj
@@ -98,6 +98,7 @@
     <Compile Include="BOLoader.cs" />
     <Compile Include="BORegistry.cs" />
     <Compile Include="BOState.cs" />
+    <Compile Include="BOUtilities.cs" />
     <Compile Include="BusinessObjectLoaderDB.cs" />
     <Compile Include="BusinessObjectLastUpdatePropertiesLog.cs" />
     <Compile Include="BusinessObjectLoaderInMemory.cs" />
