Fixed a bug in HabaneroAppConsole as it wasn't setting up the DataAccessor Mainly further work on the PanelBuilder.

--- a/source/Habanero.Test.UI.Base/Habanero.Test.UI.Base.csproj
+++ b/source/Habanero.Test.UI.Base/Habanero.Test.UI.Base.csproj
@@ -79,6 +79,7 @@
     </Compile>
     <Compile Include="ButtonsControl\TestButtonGroupControl.cs" />
     <Compile Include="PanelBuilder\TestPanelBuilder.cs" />
+    <Compile Include="PanelBuilder\TestPanelInfo.cs" />
     <Compile Include="TestButton.cs" />
     <Compile Include="TestCheckBox.cs" />
     <Compile Include="TestComboBox.cs" />
