More work on PanelBuilder

--- a/source/Habanero.UI.Base/Habanero.UI.Base.csproj
+++ b/source/Habanero.UI.Base/Habanero.UI.Base.csproj
@@ -110,10 +110,13 @@
     <Compile Include="InputFormDate.cs" />
     <Compile Include="InputFormTextBox.cs" />
     <Compile Include="IOKCancelDialogFactory.cs" />
+    <Compile Include="PanelBuilder\IPanelInfo.cs" />
     <Compile Include="LayoutManagers\ColumnLayoutManager.cs" />
     <Compile Include="IListViewItem.cs" />
     <Compile Include="IListViewItemCollection.cs" />
     <Compile Include="ISelectedListViewItemCollection.cs" />
+    <Compile Include="PanelBuilder\PanelBuilder.cs" />
+    <Compile Include="PanelBuilder\PanelInfo.cs" />
     <Compile Include="ReadOnlyGridButtonsControlManager.cs" />
     <Compile Include="StaticDataEditorManager.cs">
     </Compile>
