Started implementing logic for RelatedBusinessObjectCollection.cs and BusinessObjectCollection

--- a/source/Habanero.Test.Bo/Habanero.Test.Bo.csproj
+++ b/source/Habanero.Test.Bo/Habanero.Test.Bo.csproj
@@ -262,6 +262,7 @@
     <Compile Include="TestTransactionCommitterInMemory.cs" />
     <Compile Include="TestTransactionLogger.cs" />
     <Compile Include="TestUnrefRelationshipDef.cs" />
+    <Compile Include="TestUtils.cs" />
     <Compile Include="TransactionCommitterStub.cs" />
   </ItemGroup>
   <ItemGroup>
