Fixed a bug when saving new objects that have a primary key to the DataStoreInMemory.  Once these objects are saved the hash of their primary key changes (as it goes from ID="xxxxxx" to Surname='mysurname', ie it gets the persisted values as its primary key).  Because the hash changes the DataStoreInMemory's contains method doesn't find the match (contains does a hash check, not a full equality check as the hash check is much quicker). Fixed this by continuing to hash on the original ID's value even once its saved.  This was picked up in Chemotherapy Planning as that system uses the in memory database extensively. Also updated a few files used in the DynamicPropertiesArticle.

--- a/source/Habanero.Bo/Habanero.Bo.csproj
+++ b/source/Habanero.Bo/Habanero.Bo.csproj
@@ -348,6 +348,7 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <None Include="ClassDiagram1.cd" />
     <None Include="key.snk" />
     <None Include="Loaders\DTDs\businessObjectLookupList.dtd" />
     <None Include="Loaders\DTDs\class.dtd" />
