--- a/source/Habanero.UI.VWG/Habanero.UI.VWG.csproj
+++ b/source/Habanero.UI.VWG/Habanero.UI.VWG.csproj
@@ -103,6 +103,9 @@
     <Compile Include="FormVWG.cs">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="GridWithPanelControlVWG.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
     <Compile Include="Grid\DataGridViewCellStyleVWG.cs" />
     <Compile Include="Grid\DataGridViewCellVWG.cs" />
     <Compile Include="Grid\DataGridViewColumnVWG.cs" />
