--- a/source/Habanero.UI.Win/Habanero.UI.Win.csproj
+++ b/source/Habanero.UI.Win/Habanero.UI.Win.csproj
@@ -106,6 +106,9 @@
     <Compile Include="GridBaseWin.cs">
       <SubType>Component</SubType>
     </Compile>
+    <Compile Include="GridWithPanelControlWin.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
     <Compile Include="Grid\DataGridViewDateTimeColumnWin.cs">
       <SubType>Component</SubType>
     </Compile>
