--- a/source/Habanero.UI.VWG/Habanero.UI.VWG.csproj
+++ b/source/Habanero.UI.VWG/Habanero.UI.VWG.csproj
@@ -84,6 +84,7 @@
     <Compile Include="DefaultBOEditorFormVWG.cs">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="DockStyleVWG.cs" />
     <Compile Include="EditableGridControlVWG.cs">
       <SubType>UserControl</SubType>
     </Compile>
